ajout info dans le fichier readme.md, correction version mobile sass carrousel

--- a/src/components/carrousel/Carrousel.sass
+++ b/src/components/carrousel/Carrousel.sass
@@ -34,6 +34,9 @@
     align-self: end
     margin-bottom: 2rem
 
+    @media (max-width: 700px)
+      display: none
+
   &-slide
     display: flex
     position: relative
